[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "contract-clause-env"
version = "1.0.0"
description = "OpenEnv RL environment for legal contract clause analysis"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0",
    "websockets>=12.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.6",
    "httpx>=0.25.0",
    "openai>=1.6.0",
    "numpy>=1.24.0",
    "openenv-core>=0.2.0",
]

[project.optional-dependencies]
dev = ["pytest", "ruff", "mypy"]

[project.scripts]
server = "server.app:main"

[tool.ruff]
line-length = 100
target-version = "py311"
